# ailab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
bentoml/openllm/: README.md  load_qdrant.py  main.py  requirements.txt
bentoml/quickstart/: README.md  service.py
knowledge_graph/: Makefile  README.md  pyproject.toml
knowledge_graph/app/: Makefile  README.md  llm.py  main.py  memgraph.py  pyproject.toml
knowledge_graph/embeddings/: Dockerfile.template  Makefile  README.md  bentofile.yaml  embeddings_api.py  pyproject.toml  setup_ollama.sh
knowledge_graph/llm/: Dockerfile.template  Makefile  RAG.ipynb  README.md  bentofile.yaml  llm.ipynb  llm.py
knowledge_graph/neo-embedding/: Dockerfile  Makefile  README.md  pom.xml
knowledge_graph/neo-embedding/src/main/java/io/ailab/nembedding/: EmbeddingsServer.java
knowledge_graph/neo-embedding/src/test/java/io/ailab/nembedding/: EmbeddingsServerTest.java
knowledge_graph/notebooks/: embedding.ipynb  neo-embedding.ipynb
knowledge_graph/pipeline/: .env  README.md  docker-compose.yaml  pyproject.toml
knowledge_graph/pipeline/conf/: pipeline.yaml
knowledge_graph/pipeline/docker/postgresql/: Dockerfile  postgres-script.sql  zinit-ailab.sql
knowledge_graph/pipeline/pipeline/: config.py  cypher.py  main.py  ometa.py
knowledge_graph/pipeline/pipeline/cypher/: base.py  loader.py  node.py  ometa.py  relationship.py
knowledge_graph/pipeline/pipeline/pg/: ask.py  embedder.py  loader.py  ometa.py  producer.py
manifests/: README.md
manifests/apps/embeddings/: application.yaml
manifests/apps/embeddings/src/: deployment.yaml  service.yaml
manifests/apps/guestbook/: application.yaml
manifests/apps/llm/: application.yaml
manifests/apps/llm/src/: deployment.yaml  service.yaml
manifests/apps/memgraph/: application.yaml
manifests/apps/memgraph/src/: deployment.yaml  service.yaml  volume.yaml
manifests/apps/neo-embedding/: application.yaml
manifests/apps/neo-embedding/src/: deployment.yaml  service.yaml  volume.yaml
manifests/apps/nexus/: application.yaml
manifests/apps/nexus/src/: deployment.yaml  service.yaml  volume.yaml
manifests/utils/appsource/: configmap.yaml  install.yaml
setup/: README.md
